--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myApp",
+  "name": "sgfWebDevs",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "SGF Web Devs",
+  "homepage": "https://sgfwebdevs.com/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -22,20 +22,21 @@
     "@angular/platform-browser-dynamic": "4.4.4",
     "@ionic-native/core": "4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "4.3.2",
+    "@ionic-native/status-bar": "^4.3.2",
     "@ionic/pro": "1.0.11",
     "@ionic/storage": "2.0.1",
+    "cordova-ios": "~4.5.3",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
@@ -48,7 +49,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "ios"
