Created a new ionic project in the newest version and then copied our file to that new project

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,8 +1,6 @@
 {
-  "name": "sgfWebDevs",
-  "app_id": "37afdcd4",
+  "name": "sgfMobileApp",
+  "app_id": "",
   "type": "ionic-angular",
-  "integrations": {
-    "cordova": {}
-  }
+  "integrations": {}
 }
