--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sgfWebDevs",
+  "name": "sgfMobileApp",
   "version": "0.0.1",
-  "author": "SGF Web Devs",
-  "homepage": "https://sgfwebdevs.com/",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -12,48 +12,27 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/core": "4.3.2",
-    "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "^4.3.2",
-    "@ionic/pro": "1.0.11",
-    "@ionic/storage": "2.0.1",
-    "cordova-ios": "~4.5.3",
-    "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "^2.2.1",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/core": "4.3.3",
+    "@ionic-native/splash-screen": "4.3.3",
+    "@ionic-native/status-bar": "4.3.3",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.0.1",
-    "typescript": "2.3.4"
+    "@ionic/app-scripts": "3.1.0",
+    "typescript": "2.4.2"
   },
-  "description": "An Ionic project",
-  "cordova": {
-    "plugins": {
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-statusbar": {}
-    },
-    "platforms": [
-      "ios"
-    ]
-  }
+  "description": "An Ionic project"
 }
