Had to change "name": "sgfMobileApp" to "name": "sgf_mobile_app" due to Regex constraints.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sgfMobileApp",
+  "name": "sgf_mobile_app",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
