--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "4.3.3",
-    "@ionic-native/splash-screen": "4.3.3",
-    "@ionic-native/status-bar": "4.3.3",
-    "@ionic/storage": "2.1.3",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@ionic-native/core": "^4.4.2",
+    "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/splash-screen": "^4.4.2",
+    "@ionic-native/status-bar": "^4.4.2",
+    "@ionic/storage": "^2.1.3",
     "cordova-android": "6.3.0",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "ionic-angular": "3.9.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "ionicons": "^3.0.0",
+    "rxjs": "^5.5.5",
+    "sw-toolbox": "^3.6.0",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.0",
+    "@ionic/app-scripts": "^3.1.4",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
@@ -47,7 +49,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android"
