--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.2.1",
     "firebase": "^4.7.0",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^3.0.0",
+    "onesignal-cordova-plugin": "^2.3.1",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
     "zone.js": "^0.8.18"
@@ -52,9 +55,12 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-sqlite-storage": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   }
