--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/core": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/splash-screen": "^4.4.2",
-    "@ionic-native/status-bar": "^4.4.2",
+    "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
@@ -41,7 +41,8 @@
     "onesignal-cordova-plugin": "^2.3.1",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
-    "zone.js": "^0.8.18"
+    "zone.js": "^0.8.18",
+    "cordova-plugin-statusbar": "~2.2.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
@@ -57,11 +58,12 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-geolocation": {},
       "cordova-sqlite-storage": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
