--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@ionic-native/core": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/in-app-browser": "^4.5.3",
     "@ionic-native/splash-screen": "^4.4.2",
     "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "^2.1.3",
@@ -30,8 +31,10 @@
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-geolocation": "^3.0.0",
+    "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "~2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.1",
     "firebase": "^4.7.0",
@@ -41,8 +44,7 @@
     "onesignal-cordova-plugin": "^2.3.1",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
-    "zone.js": "^0.8.18",
-    "cordova-plugin-statusbar": "~2.2.3"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
@@ -59,7 +61,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-sqlite-storage": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
