--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^4.4.2",
     "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "^2.1.3",
+    "@types/dotenv": "^4.0.3",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
@@ -32,8 +33,10 @@
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "~2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.1",
+    "dotenv": "^5.0.1",
     "firebase": "^4.7.0",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -41,8 +44,7 @@
     "onesignal-cordova-plugin": "^2.3.1",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
-    "zone.js": "^0.8.18",
-    "cordova-plugin-statusbar": "~2.2.3"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
