--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^4.4.2",
     "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "^2.1.3",
+    "@types/pusher-js": "^4.2.0",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.7",
@@ -38,6 +39,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "^3.0.0",
     "onesignal-cordova-plugin": "^2.3.1",
+    "pusher-js": "^4.2.2",
     "rxjs": "^5.5.5",
     "sw-toolbox": "^3.6.0",
     "zone.js": "^0.8.18"
