--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@ionic-native/core": "^4.4.2",
     "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/http": "^4.7.0",
     "@ionic-native/in-app-browser": "^4.6.0",
     "@ionic-native/splash-screen": "^4.4.2",
     "@ionic-native/status-bar": "^4.5.3",
@@ -29,7 +30,9 @@
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -62,7 +65,8 @@
       "cordova-sqlite-storage": {},
       "onesignal-cordova-plugin": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
       "ios",
