--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^4.4.2",
     "@ionic-native/status-bar": "^4.5.3",
     "@ionic/storage": "^2.1.3",
+    "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
