ionic view app key

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "sgf_mobile_app",
-  "app_id": "",
+  "app_id": "37afdcd4",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
