--- a/package.json
+++ b/package.json
@@ -12,21 +12,27 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^5.1.0",
-    "@angular/compiler": "^5.1.0",
-    "@angular/compiler-cli": "^5.1.0",
-    "@angular/core": "^5.1.0",
-    "@angular/forms": "^5.1.0",
-    "@angular/http": "^5.1.0",
-    "@angular/platform-browser": "^5.1.0",
-    "@angular/platform-browser-dynamic": "^5.1.0",
-    "@ionic-native/core": "^4.4.2",
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/core": "~4.10.0",
+    "@ionic-native/splash-screen": "~4.10.0",
+    "@ionic-native/status-bar": "~4.10.0",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
+    "ionicons": "3.0.0",
+    "rxjs": "5.5.11",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.26",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/http": "^4.7.0",
     "@ionic-native/in-app-browser": "^4.6.0",
-    "@ionic-native/splash-screen": "^4.4.2",
-    "@ionic-native/status-bar": "^4.5.3",
-    "@ionic/storage": "^2.1.3",
     "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
@@ -42,13 +48,8 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.0",
     "firebase": "^4.7.0",
-    "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "^3.0.0",
-    "onesignal-cordova-plugin": "^2.3.2",
-    "rxjs": "^5.5.5",
-    "sw-toolbox": "^3.6.0",
-    "zone.js": "^0.8.18"
+    "onesignal-cordova-plugin": "^2.3.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
