--- a/package.json
+++ b/package.json
@@ -22,17 +22,12 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
-    "@ionic-native/splash-screen": "~4.10.0",
-    "@ionic-native/status-bar": "~4.10.0",
-    "@ionic/storage": "2.1.3",
-    "ionic-angular": "3.9.2",
-    "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
     "@ionic-native/geolocation": "^4.4.2",
     "@ionic-native/http": "^4.7.0",
     "@ionic-native/in-app-browser": "^4.6.0",
+    "@ionic-native/splash-screen": "~4.10.0",
+    "@ionic-native/status-bar": "~4.10.0",
+    "@ionic/storage": "2.1.3",
     "android-versions": "^1.3.0",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "6.3.0",
@@ -42,14 +37,19 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-inappbrowser": "^2.0.2",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.3.0",
+    "cordova-sqlite-storage": "^2.3.3",
     "firebase": "^4.7.0",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
-    "onesignal-cordova-plugin": "^2.3.2"
+    "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "^2.4.1",
+    "rxjs": "5.5.11",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.1.4",
