--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-splashscreen": "^4d.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.3",
@@ -46,6 +46,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ng2-cordova-oauth": "0.0.8",
     "onesignal-cordova-plugin": "^2.4.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
