--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "cordova-plugin-geolocation": "^3.0.0",
     "cordova-plugin-inappbrowser": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-splashscreen": "^4d.1.0",
+    "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.3.3",
