--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "android-versions": "^1.3.0",
-    "cordova-android": "6.3.0",
+    "cordova-android": "7.0.0",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^1.1.7",
@@ -70,8 +70,8 @@
       "cordova-plugin-advanced-http": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
