--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ plugins/android.json
 plugins/ios.json
 www/
 $RECYCLE.BIN/
+src/environments/environment.ts
 
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
+
