WIP Adding realtime attendees

--- a/src/environments/environment.ts.example
+++ b/src/environments/environment.ts.example
@@ -10,5 +10,8 @@ export const environment = {
     meetup: {
         browserClientId: '',
         cordovaClientId: '',
+    },
+    webDevs: {
+        baseUrl: 'https://admin.sgfwebdevs.com'
     }
 };
