--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
+    "@types/pusher-js": "^4.2.0",
     "android-versions": "^1.3.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "^4.5.5",
@@ -46,6 +47,7 @@
     "ionicons": "3.0.0",
     "ng2-cordova-oauth": "github:sgf-web-devs/ngx-cordova-oauth",
     "onesignal-cordova-plugin": "^2.4.1",
+    "pusher-js": "^4.2.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
